tests/negative/neg_pr118_unconstrained_array_index.safe
package neg_pr118_unconstrained_array_index

   type values is array (integer) of integer

